feat: Add core data pipeline components including central configuration, ATR engine, tick aggregation, gap filling, and robust WebSocket reconnection with integrated alerting.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ data/fallback/
 data/scrip_master_raw.txt
 data/scrip_master_columns.txt
 *.log
+output*.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
